@@ -22,14 +22,17 @@ package org.netbeans.nbbuild;
 import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.PrintWriter;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
@@ -55,6 +58,7 @@ import org.apache.tools.ant.taskdefs.Get;
 import org.apache.tools.ant.types.FileSet;
 import org.apache.tools.ant.util.FileUtils;
 import org.netbeans.nbbuild.AutoUpdateCatalogParser.ModuleItem;
+import org.netbeans.nbbuild.extlibs.DownloadBinaries;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.xml.sax.Attributes;
@@ -67,7 +71,7 @@ import org.xml.sax.helpers.DefaultHandler;
  * @author Jaroslav Tulach <jtulach@netbeans.org>
  */
 public class AutoUpdate extends Task {
-    private List<Modules> modules = new ArrayList<Modules>();
+    private List<Modules> modules = new ArrayList<>();
     private FileSet nbmSet;
     private File download;
     private File dir;
@@ -134,16 +138,26 @@ public class AutoUpdate extends Task {
             }
             DirectoryScanner s = nbmSet.getDirectoryScanner(getProject());
             File basedir = s.getBasedir();
-            units = new HashMap<String, ModuleItem>();
+            units = new HashMap<>();
             for (String incl : s.getIncludedFiles()) {
                 File nbm = new File(basedir, incl);
                 try {
                     URL u = new URL("jar:" + nbm.toURI() + "!/Info/info.xml");
                     Map<String, ModuleItem> map;
                     final URL url = nbm.toURI().toURL();
-                    map = AutoUpdateCatalogParser.getUpdateItems(u, url, this);
+                    try {
+                        map = AutoUpdateCatalogParser.getUpdateItems(u, url, this);
+                    } catch (FileNotFoundException ex) {
+                        JarFile f = new JarFile(nbm);
+                        Document doc = XMLUtil.createDocument("module");
+                        MakeUpdateDesc.fakeOSGiInfoXml(f, nbm, doc);
+                        ByteArrayOutputStream os = new ByteArrayOutputStream();
+                        XMLUtil.write(doc, os);
+                        ByteArrayInputStream is = new ByteArrayInputStream(os.toByteArray());
+                        map = AutoUpdateCatalogParser.getUpdateItems(u, is, url, this);
+                    }
                     assert map.size() == 1;
-                    Map.Entry<String,ModuleItem> entry = map.entrySet().iterator().next();
+                    Map.Entry<String, ModuleItem> entry = map.entrySet().iterator().next();
                     units.put(entry.getKey(), entry.getValue().changeDistribution(url));
                 } catch (IOException ex) {
                     throw new BuildException(ex);
@@ -256,8 +270,7 @@ public class AutoUpdate extends Task {
                 module_version.setAttribute("origin", "Ant"); // XXX set to URL origin
                 module_version.setAttribute("specification_version", uu.getSpecVersion());
 
-                JarFile  zf = new JarFile(tmp);
-                try {
+                try (JarFile zf = new JarFile(tmp)) {
                 Manifest manifest = zf.getManifest();
                 if (manifest == null || manifest.getMainAttributes().getValue("Bundle-SymbolicName") == null) { // regular NBM
                 Enumeration<? extends ZipEntry> en = zf.entries();
@@ -326,21 +339,17 @@ public class AutoUpdate extends Task {
                     String relName = "config/Modules/" + dash + ".xml";
                     File configModulesXml = new File(whereTo, relName);
                     configModulesXml.getParentFile().mkdirs();
-                    PrintWriter w = new PrintWriter(configModulesXml);
-                    try {
+                    try (PrintWriter w = new PrintWriter(configModulesXml)) {
                         w.print("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE module PUBLIC \"-//NetBeans//DTD Module Status 1.0//EN\"\n                        \"http://www.netbeans.org/dtds/module-status-1_0.dtd\">\n<module name=\"");
                         w.print(uu.getCodeName());
                         w.print("\">\n    <param name=\"autoload\">true</param>\n    <param name=\"eager\">false</param>\n    <param name=\"jar\">modules/");
                         w.print(dash);
                         w.print(".jar</param>\n    <param name=\"reloadable\">false</param>\n</module>\n");
-                    } finally {
-                        w.close();
                     }
                     Element file = (Element) module_version.appendChild(doc.createElement("file"));
                     file.setAttribute("crc", String.valueOf(getFileCRC(configModulesXml)));
                     file.setAttribute("name", relName);
                     relName = "modules/" + dash + ".jar";
-                    zf.close();
                     File bundle = new File(whereTo, relName);
                     bundle.getParentFile().mkdirs();
                     FileUtils.getFileUtils().copyFile(tmp, bundle);
@@ -348,8 +357,6 @@ public class AutoUpdate extends Task {
                     file.setAttribute("crc", String.valueOf(getFileCRC(bundle)));
                     file.setAttribute("name", relName);
                 }
-                } finally {
-                    zf.close();
                 }
                 File tracking = new File(new File(whereTo, "update_tracking"), dash + ".xml");
                 log("Writing tracking file " + tracking, Project.MSG_VERBOSE);
@@ -400,12 +407,17 @@ public class AutoUpdate extends Task {
                     }
                     url = url.substring(0, index) + propVal + url.substring(end + 1);
                 }
-                log("Trying external URL: " + url, Project.MSG_INFO);
                 try {
-                    conn = new URL(url).openConnection();
+                    URI u = new URI(url);
+                    if ("m2".equals(u.getScheme())) {
+                        log("Trying external Maven URL: " + u, Project.MSG_INFO);
+                        return DownloadBinaries.downloadMaven(this, u);
+                    }
+                    log("Trying external URL: " + u, Project.MSG_INFO);
+                    conn = u.toURL().openConnection();
                     conn.connect();
                     return conn.getInputStream();
-                } catch (IOException ex) {
+                } catch (URISyntaxException | IOException ex) {
                     log("Cannot connect to " + url, Project.MSG_WARN);
                     try {
                         logThrowable(ex);
@@ -418,7 +430,7 @@ public class AutoUpdate extends Task {
         throw new IOException("Cannot resolve external references");
     }
 
-    private void logThrowable(IOException ex) {
+    private void logThrowable(Exception ex) {
         log("Details", ex, Project.MSG_VERBOSE);
     }
 
@@ -438,9 +450,7 @@ public class AutoUpdate extends Task {
             //https://netbeans.org/bugzilla/show_bug.cgi?id=119861
             result = process.waitFor();
             process.destroy();
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (InterruptedException e) {
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
         return result == 0;
@@ -487,7 +497,7 @@ public class AutoUpdate extends Task {
     }
 
     private Map<String,List<String>> findExistingModules(File... clusters) {
-        Map<String,List<String>> all = new HashMap<String, List<String>>();
+        Map<String,List<String>> all = new HashMap<>();
         for (File c : clusters) {
             File mc = new File(c, "update_tracking");
             final File[] arr = mc.listFiles();
@@ -541,7 +551,7 @@ public class AutoUpdate extends Task {
                     if (name == null || version == null) {
                         throw new BuildException("Cannot find version in " + config);
                     }
-                    arr = new ArrayList<String>();
+                    arr = new ArrayList<>();
                     arr.add(version);
                     toAdd.put(name, arr);
                     return;
